implemented expert game mode